--- a/product.html
+++ b/product.html
@@ -59,19 +59,14 @@
                 <p class="m-1">PRODUCTS</p>
               </a>
               <div class="dropdown-menu no-gutters">
-                <a class="dropdown-item" href="product.html"
+                <a class="dropdown-item" href="agri-product.html"
                   style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                <a class="dropdown-item" href="product.html"
+                <a class="dropdown-item" href="air.html"
                   style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                <a class="dropdown-item" href="product.html"
+                <a class="dropdown-item" href="growbags.html"
                   style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
               </div>
             </li>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">DART</p>
-              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
@@ -116,7 +111,9 @@
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
+        <a href="agri-product.html">
         <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;">More Products</button>
+      </a>
       </p>
     </div>
     <hr class="mt-5 mb-5">
@@ -146,7 +143,9 @@
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
+        <a href="air.html">
         <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;">More Products</button>
+      </a>
       </p>
     </div>
     <hr class="mt-5 mb-5">
@@ -173,7 +172,9 @@
     </div>
     <div class="section-button mx-auto">
       <p class="text-center">
+        <a href="growbags.html">
         <button type="button" class="btn section-button" style="background-color: #78b122;border-radius: 50px;">More Products</button>
+      </a>
       </p>
     </div>
     <hr class="mt-5 mb-5">
