--- a/home.html
+++ b/home.html
@@ -140,8 +140,8 @@
       <div class="col-sm-6">
         <p>Contact us and we'll get back to you within 24 hours.</p>
         <p><span class="glyphicon glyphicon-map-marker"></span> Kollam , Kerala</p>
-        <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-        <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+        <p><span class="glyphicon glyphicon-phone"></span> +91 9061714290</p>
+        <p><span class="glyphicon glyphicon-envelope"></span> agrivator@gmail.com</p>
       </div>
       <div class="col-sm-6">
         <div class="row">
@@ -186,11 +186,11 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Team <a href="team.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
-  <p>Flashapp <a href="flashapp.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
-  <p>Products <a href="product.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
-  <p>Services <a href="services.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
-  <p>Vision <a href="vision.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+  <p> <a href="team.html" data-toggle="tooltip" title="Visit team page">Team</a></p>
+  <p><a href="flashapp.html" data-toggle="tooltip" title="Visit app page">Flash app</a></p>
+  <p><a href="product.html" data-toggle="tooltip" title="Visit products page">Products </a></p>
+  <p><a href="services.html" data-toggle="tooltip" title="Visit services page">Services </a></p>
+  <p> <a href="vision.html" data-toggle="tooltip" title="Visit vision page">Vision</a></p>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Social buttons -->
