--- a/vision.html
+++ b/vision.html
@@ -1,11 +1,15 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGRIVATOR</title>
 
 
-    
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Material Design Bootstrap -->
+    <link rel="stylesheet" href="css/mdb.min.css">
+
     <link rel="stylesheet" type="text/css" href="styleab.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -86,11 +90,6 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                                <p class="m-1">DART</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
                                 <p class="m-1">SERVICE</p>
                             </a>
@@ -112,7 +111,7 @@
         <!--/.Navbar -->
     </section>
     <section class="mt-5">
-        <div class="row">
+        <!-- <div class="row">
             <h1 class="mx-auto m-5">VISION</h1>
         </div>
         <div class=" psize mx-auto">
@@ -123,7 +122,47 @@
                 <div class="sliders col-md-5 m-5"></div>
             </div>
 
+        </div> -->
+        <div class="row">
+            <h2 class="vision mx-auto">Vision</h2>
         </div>
+        <div class="row  vision-part">
+            <div class="col-sm-5 mx-auto">
+                <p class="text-center vision-desc flex-center flex-column">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo
+                    consequat</p>
+            </div>
+            <div class="col-sm-5 mx-auto">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(45).jpg"
+                                alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(46).jpg"
+                                alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg"
+                                alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+
     </section>
 
 
