--- a/samplepage.html
+++ b/samplepage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Karshakasahayi</title>
+  <title>Sample Page</title>
   <!-- MDB icon -->
   <!-- <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"> -->
   <!-- Font Awesome -->
@@ -25,7 +25,7 @@
 <!-- Just an image -->
 <nav class="navbar navbar-dark color">
   <a class="navbar-brand" href="#">
-    <img src="" height="30" alt="">
+    <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" height="30" alt="mdb logo">
   </a>
 </nav>
 <!-- Extended default form grid -->
